--- a/Portfolio Site/dev/scss/sections/_about-content.scss
+++ b/Portfolio Site/dev/scss/sections/_about-content.scss
@@ -6,6 +6,10 @@
 
     #map-shape {
         grid-area: map;
+        @include md{
+            margin-top: -15vh;
+            margin-left: 2vw;
+        }
 
         #diamond {
             border: 40vw solid transparent;
@@ -18,12 +22,12 @@
             z-index: 40;
 
             @include md {
-                border: 50px solid transparent;
+                border: 22vw solid transparent;
                 border-bottom-color: $pink;
                 height: 100%;
                 position: relative;
-                top: -50px;
-                width: 100%;
+                top: -100px;
+                margin: 20px -1vw 0;
             }
         }
 
@@ -39,14 +43,13 @@
             z-index: 40;
 
             @include md {
-                border: 50px solid transparent;
+                border: 22vw solid transparent;
                 border-top-color: $pink;
                 content: '';
                 height: 0;
-                left: -50px;
+                left: -22vw;
                 position: absolute;
-                top: 50px;
-                width: 100%;
+                top: 22vw;
             }
         }
 
@@ -58,9 +61,9 @@
             z-index: 50;
 
             @include md {
-                height: 30vh;
-                margin: 0px 0 50px;
-                width: 100%;
+                height: 25vh;
+                margin: -20vh 5vw 50px;
+                width: 25vh;
             }
         }
     }
@@ -75,6 +78,7 @@
 
     @include md {
         padding-top: auto;
+        margin-top: 15vh;
     }
 }
 
@@ -89,7 +93,7 @@
         grid-template-areas: "heading para"
             "map para"
             "resume para";
-        grid-template-columns: 40% 60%;
+        grid-template-columns: 50% 50%;
         padding: 0 4%;
     }
 }
