--- a/Portfolio Site/deploy/css/styles.css
+++ b/Portfolio Site/deploy/css/styles.css
@@ -608,6 +608,8 @@ textarea {
 }
 @media (min-width: 1025px) {
   #nav-container ul {
+    margin-top: -38vh;
+    margin-bottom: 30vh;
     display: flex;
     justify-content: flex-end;
   }
@@ -615,7 +617,7 @@ textarea {
 #nav-container ul li {
   border-bottom: 1px solid #000;
 }
-@media (min-width: 1440px) {
+@media (min-width: 1025px) {
   #nav-container ul li {
     align-items: center;
     border-bottom: none;
@@ -1385,6 +1387,13 @@ li {
   object-position: center;
 }
 
+@media (min-width: 768px) {
+  #featured {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 #g1 {
   width: 90%;
   height: 90%;
@@ -1395,6 +1404,13 @@ li {
   width: 90%;
   height: 90%;
   grid-area: g2;
+}
+@media (min-width: 768px) {
+  #g2 {
+    padding-top: 20%;
+    width: 90%;
+    height: 60%;
+  }
 }
 
 #g3 {
@@ -1409,6 +1425,11 @@ li {
   width: 90%;
   height: 90%;
   grid-area: g4;
+}
+@media (min-width: 768px) {
+  #g4 {
+    margin-top: -20%;
+  }
 }
 
 /* =============
@@ -1426,6 +1447,12 @@ li {
     margin-left: 2vw;
   }
 }
+@media (min-width: 1025px) {
+  #googlemap #map-shape {
+    margin-top: -25vh;
+    margin-left: 6vw;
+  }
+}
 #googlemap #map-shape #diamond {
   border: 40vw solid transparent;
   border-bottom-color: #FF6164;
@@ -1439,6 +1466,16 @@ li {
 @media (min-width: 768px) {
   #googlemap #map-shape #diamond {
     border: 22vw solid transparent;
+    border-bottom-color: #FF6164;
+    height: 100%;
+    position: relative;
+    top: -100px;
+    margin: 20px -1vw 0;
+  }
+}
+@media (min-width: 1025px) {
+  #googlemap #map-shape #diamond {
+    border: 18vw solid transparent;
     border-bottom-color: #FF6164;
     height: 100%;
     position: relative;
@@ -1468,6 +1505,17 @@ li {
     top: 22vw;
   }
 }
+@media (min-width: 1025px) {
+  #googlemap #map-shape #diamond:after {
+    border: 18vw solid transparent;
+    border-top-color: #FF6164;
+    content: "";
+    height: 0;
+    left: -18vw;
+    position: absolute;
+    top: 18vw;
+  }
+}
 #googlemap #map-shape #map {
   height: 50vw;
   margin-left: 25vw;
@@ -1480,6 +1528,13 @@ li {
     height: 25vh;
     margin: -20vh 5vw 50px;
     width: 25vh;
+  }
+}
+@media (min-width: 1025px) {
+  #googlemap #map-shape #map {
+    height: 45vh;
+    width: 45vh;
+    margin: -35vh 5vw 50px;
   }
 }
 
@@ -1496,6 +1551,11 @@ li {
     margin-top: 15vh;
   }
 }
+@media (min-width: 1025px) {
+  #para {
+    margin-top: 0vh;
+  }
+}
 
 #resume {
   grid-area: resume;
@@ -1506,6 +1566,14 @@ li {
   #about {
     display: grid;
     grid-template-areas: "heading para" "map para" "resume para";
+    grid-template-columns: 50% 50%;
+    padding: 0 4%;
+  }
+}
+@media (min-width: 1025px) {
+  #about {
+    display: grid;
+    grid-template-areas: ". heading" "map para" "resume para";
     grid-template-columns: 50% 50%;
     padding: 0 4%;
   }
