--- a/Portfolio Site/dev/scss/components/_navigation.scss
+++ b/Portfolio Site/dev/scss/components/_navigation.scss
@@ -6,12 +6,14 @@
 		height: 100%;
 		text-align: right;
 		@include lg {
+			margin-top: -38vh;
+			margin-bottom: 30vh;
 			display: flex;
 			justify-content: flex-end;
 		}
 		li {
 			border-bottom: 1px solid $black;
-			@include xl {
+			@include lg {
 				align-items: center;
 				border-bottom: none;
 				display: flex;
