--- a/Portfolio Site/dev/scss/components/_typography.scss
+++ b/Portfolio Site/dev/scss/components/_typography.scss
@@ -8,7 +8,7 @@ h1 {
 	@include md {
 		font-size: rem-calc(25);
 	}
-	@include xl {
+	@include lg {
 		font-size: rem-calc(40);
 	}
 }
@@ -22,8 +22,8 @@ h2 {
 		font-size: rem-calc(60);
 		line-height: rem-calc(75);
 	}
-	@include xl {
-		font-size: rem-calc(100);
+	@include lg {
+		font-size: rem-calc(70);
 		line-height: rem-calc(125);
 		text-align: right;
 	}
