--- a/Portfolio Site/dev/scss/sections/_portfolio-content.scss
+++ b/Portfolio Site/dev/scss/sections/_portfolio-content.scss
@@ -24,6 +24,12 @@
     }
 
 }
+#featured{
+    @include md{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
 
 #g1{
     width: 90%;
@@ -34,6 +40,11 @@
     width: 90%;
     height: 90%;
     grid-area: g2;
+    @include md{
+    padding-top: 20%;
+    width: 90%;
+    height: 60%;
+    }
 }
 #g3{
     background-color: $lightgrey;
@@ -46,4 +57,7 @@
     width: 90%;
     height: 90%;
     grid-area: g4;
+    @include md{
+        margin-top: -20%;
+    }
 }
