--- a/Portfolio Site/deploy/css/styles.css
+++ b/Portfolio Site/deploy/css/styles.css
@@ -1237,6 +1237,9 @@ li {
     height: 42.5vw;
   }
 }
+#features #recent #recent-pic:hover {
+  opacity: 0.25;
+}
 @media (min-width: 768px) {
   #features #recent p {
     width: 35vw;
@@ -1277,6 +1280,9 @@ li {
     width: 42.5vw;
     height: 42.5vw;
   }
+}
+#features #photo #photo-pic:hover {
+  opacity: 0.25;
 }
 @media (min-width: 768px) {
   #features #photo p {
@@ -1319,6 +1325,9 @@ li {
     height: 42.5vw;
   }
 }
+#features #collabs #collabs-pic:hover {
+  opacity: 0.25;
+}
 @media (min-width: 768px) {
   #features #collabs p {
     width: 35vw;
@@ -1360,6 +1369,9 @@ li {
     height: 42.5vw;
   }
 }
+#features #shop #shop-pic:hover {
+  opacity: 0.25;
+}
 @media (min-width: 768px) {
   #features #shop p {
     width: 35vw;
@@ -1400,6 +1412,10 @@ li {
   grid-area: g1;
 }
 
+#g1:hover {
+  opacity: 0.25;
+}
+
 #g2 {
   width: 90%;
   height: 90%;
@@ -1408,9 +1424,13 @@ li {
 @media (min-width: 768px) {
   #g2 {
     padding-top: 20%;
-    width: 90%;
+    width: 100%;
     height: 60%;
   }
+}
+
+#g2:hover {
+  opacity: 0.25;
 }
 
 #g3 {
@@ -1419,6 +1439,10 @@ li {
   width: 90%;
   height: 90%;
   grid-area: g3;
+}
+
+#g3:hover {
+  opacity: 0.25;
 }
 
 #g4 {
@@ -1430,6 +1454,10 @@ li {
   #g4 {
     margin-top: -20%;
   }
+}
+
+#g4:hover {
+  opacity: 0.25;
 }
 
 /* =============
@@ -1553,7 +1581,7 @@ li {
 }
 @media (min-width: 1025px) {
   #para {
-    margin-top: 0vh;
+    margin-top: -15vh;
   }
 }
 
