--- a/Portfolio Site/dev/scss/sections/_home-content.scss
+++ b/Portfolio Site/dev/scss/sections/_home-content.scss
@@ -32,14 +32,17 @@
         }
     }
 }
-#features-heading{
-    @include md{
+
+#features-heading {
+    @include md {
         padding-right: 5vw;
     }
 }
+
 #features {
     width: 90vw;
     margin: auto 5vw;
+
     @include md {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -47,16 +50,18 @@
         margin: auto 5vw;
         column-gap: 5vw;
     }
+
     p {
         width: 50vh;
         padding: 35px 2vh 80px;
     }
 
     #recent {
-        @include md{
+        @include md {
             grid-column-start: 1;
             grid-row-start: 1;
         }
+
         #recent-tri {
             background-color: transparent;
             border-color: $darkblue transparent transparent transparent;
@@ -65,7 +70,8 @@
             height: 0;
             width: 0;
             z-index: 100;
-            @include md{
+
+            @include md {
                 border-width: 10vh 42.5vw 0 0;
             }
         }
@@ -79,25 +85,30 @@
             width: 100%;
             margin-top: -10vh;
             z-index: 50;
-            @include md{
+
+            @include md {
                 width: 42.5vw;
                 height: 42.5vw;
             }
         }
-        
-            p{
-                @include md{
+        #recent-pic:hover{
+            opacity: .25;
+        }
+
+        p {
+            @include md {
                 width: 35vw;
             }
         }
-        
+
     }
 
     #photo {
-        @include md{
+        @include md {
             grid-column-start: 2;
             grid-row-start: 1;
         }
+
         #photo-tri {
             background-color: transparent;
             border-color: $darkblue transparent transparent transparent;
@@ -106,7 +117,8 @@
             height: 0;
             width: 0;
             z-index: 100;
-            @include md{
+
+            @include md {
                 border-width: 10vh 42.5vw 0 0;
             }
         }
@@ -120,24 +132,30 @@
             width: 100%;
             z-index: 50;
             margin-top: -10vh;
-            @include md{
+
+            @include md {
                 width: 42.5vw;
                 height: 42.5vw;
             }
         }
-        p{
-            @include md{
-            width: 35vw;
+        #photo-pic:hover{
+            opacity: .25;
         }
-    }
+
+        p {
+            @include md {
+                width: 35vw;
+            }
+        }
 
     }
 
     #collabs {
-        @include md{
+        @include md {
             grid-column-start: 1;
             grid-row-start: 2;
         }
+
         #collabs-tri {
             background-color: transparent;
             border-color: $darkblue transparent transparent transparent;
@@ -146,7 +164,8 @@
             height: 0;
             width: 0;
             z-index: 100;
-            @include md{
+
+            @include md {
                 border-width: 10vh 42.5vw 0 0;
             }
         }
@@ -160,24 +179,30 @@
             width: 100%;
             z-index: 50;
             margin-top: -10vh;
-            @include md{
+
+            @include md {
                 width: 42.5vw;
                 height: 42.5vw;
             }
         }
-        p{
-            @include md{
-            width: 35vw;
+        #collabs-pic:hover{
+            opacity: .25;
         }
-    }
+
+        p {
+            @include md {
+                width: 35vw;
+            }
+        }
 
     }
 
     #shop {
-        @include md{
+        @include md {
             grid-column-start: 2;
             grid-row-start: 2;
         }
+
         #shop-tri {
             background-color: transparent;
             border-color: $darkblue transparent transparent transparent;
@@ -186,7 +211,8 @@
             height: 0;
             width: 0;
             z-index: 100;
-            @include md{
+
+            @include md {
                 border-width: 10vh 42.5vw 0 0;
             }
         }
@@ -200,15 +226,20 @@
             width: 100%;
             z-index: 50;
             margin-top: -10vh;
-            @include md{
+
+            @include md {
                 width: 42.5vw;
                 height: 42.5vw;
             }
         }
-        p{
-            @include md{
-            width: 35vw;
+        #shop-pic:hover{
+            opacity: .25;
         }
-    }
+
+        p {
+            @include md {
+                width: 35vw;
+            }
+        }
     }
 }
