--- a/Portfolio Site/dev/scss/sections/_portfolio-content.scss
+++ b/Portfolio Site/dev/scss/sections/_portfolio-content.scss
@@ -30,11 +30,13 @@
         grid-template-columns: repeat(2, 1fr);
     }
 }
-
 #g1{
     width: 90%;
     height: 90%;
     grid-area: g1;
+}
+#g1:hover{
+    opacity: .25;
 }
 #g2{
     width: 90%;
@@ -42,9 +44,12 @@
     grid-area: g2;
     @include md{
     padding-top: 20%;
-    width: 90%;
+    width: 100%;
     height: 60%;
     }
+}
+#g2:hover{
+    opacity: .25;
 }
 #g3{
     background-color: $lightgrey;
@@ -53,6 +58,9 @@
     height: 90%;
     grid-area: g3;
 }
+#g3:hover{
+    opacity: .25;
+}
 #g4{
     width: 90%;
     height: 90%;
@@ -60,4 +68,7 @@
     @include md{
         margin-top: -20%;
     }
+}
+#g4:hover{
+    opacity: .25;
 }
